--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  font-family: 'poppins';
+  text-decoration: none;
+  list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  border: .1rem solid black;
+  width: 50%;
+  margin: 2rem auto;
+  height: 150vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Apptodo{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  font-size: 1.5rem;
+}
+
+h1 {
+  text-align: center;
+  font-size: 1.7rem;
+  font-weight: 500;
+}
+
+.todolist{
+  font-size: 1rem;
+  margin-top: 2rem;
+}
+
+.todocontent{
+  background-color: seashell;
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+}
+
+.todolist .completed{
+  border-left: .2rem solid green;
+}
+
+.todoshift{
+  display: flex;
+  justify-content: space-between;
+}
+
+.todoshift button{
+  cursor: pointer;
+  color: red;
+  background-color: seashell;
+  border: none;
+}
+
+.addtodo button{
+    cursor: pointer;
   color: white;
+  background-color: green;
+  height: 7vh;
+  width: 7rem;
+  border-radius: .5rem;
+  border: none;
+  font-size: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.addtodos button{
+  cursor: pointer;
+color: white;
+background-color: red;
+height: 7vh;
+width: 7rem;
+border-radius: .5rem;
+border: none;
+font-size: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-form{
+  margin-bottom: 3rem;
+}
+
+.form-control{
+  margin: 2rem 0;
+}
+
+.form-control label{
+  display: block;
+}
+
+.form-control input{
+  width: 94%;
+  height: 5vh;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 1rem;
+}
+
+.form-control-check{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label{
+  flex: 1;
+}
+
+.form-control-check input{
+  flex: 2;
+  height: 1rem;
+}
+
+.btn{
+  display:  inline-block;
+  background: black;
+  color:  white;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+/* 1234ottun5 */
+.btn-block{
+  width: 98%;
 }
